# estoril

./: .gitignore  .ocamlformat  .scalafmt.conf  build.sbt  estoril.opam  estoril.opam.locked  release  scalafmt.sbt  version.sbt
lib/: aux.ml  dune  lexer.ml  lexer.mli  location.ml  parser.mly  syntax.ml  token.ml  token.mly
project/: plugins.sbt
project/project/: plugins.sbt
src/main/resources/: log4j2.component.properties
src/main/resources/ac/res/estoril/: feed.jade  layout.jade  style.styl
src/main/resources/nu/u8/estoril/: feed.jade  layout.jade  style.styl
src/main/scala/ac/res/estoril/: Articles.scala  Atom.scala  Content.scala  Generate.scala  Git.scala  HighlightJS.scala  MarkdownFilter.scala  PandocFilter.scala  Resource.scala  TemplateEngine.scala  Utils.scala
src/main/scala/nu/u8/estoril/: Articles.scala  Atom.scala  Content.scala  Generate.scala  Git.scala  HighlightJS.scala  PandocFilter.scala  Resource.scala  TemplateEngine.scala  Utils.scala
src/test/resources/ac/res/estoril/: test.md
src/test/scala/ac/res/estoril/: MarkdownSpec.scala  ResourceSpec.scala  Spec.scala
src/test/scala/nu/u8/estoril/: ResourceSpec.scala  Spec.scala
test/: aux.ml  dune  simple.estrl  test_lexer.ml
