opam-version: "2.0"
name: "estoril"
version: "dev"
synopsis: "Estoril is yet another static site generator"
maintainer: "tomoaki3478@res.ac"
authors: ["Takezoe,Tomoaki"]
homepage: "https://gihub.com/orphos/estoril"
bug-reports: "https://github.com/orphos/estoril"
dev-repo: "git+https://github.com/orphos/estoril.git"
license: "Apache-2.0 WITH LLVM-exception"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml"
  "dune" {build}
  "ocamlformat" {build}
  "base"
  "sedlex"
  "menhir"
  "sqlite3"
  "zarith"
  "camomile"
  "batteries"
  "xmlm"
]
