(library
 (public_name estoril)
 (libraries base sedlex zarith camomile batteries xmlm)
 (modules lexer parser location syntax token)
 (preprocess
  (pps sedlex.ppx ppx_deriving.show)))

(menhir
 (flags --explain --external-tokens Token)
 (modules parser token)
 (merge_into parser))

(env
 (dev
  (flags
   (:standard -w +a-4)
   (:standard -warn-error -a+31))))
